Fix alignment of close snapin button

--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -302,7 +302,7 @@ div.snapin {
       width: 16px;
       height: 16px;
       padding: 0;
-      margin-top: -9px; /* HACK to align the button */
+      margin-top: -8px; /* HACK to align the button */
     }
   }
 
